Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/parser/SingleCommaAnnotationValueFail.out
SingleCommaAnnotationValueFail.java:11:12: compiler.err.expected: '}'
SingleCommaAnnotationValueFail.java:11:14: compiler.err.expected4: class, interface, enum, record
2 errors
